# mpu6050

./: .gitignore  .travis.yml  Makefile  README.md  mpu6050.cabal
demo/: Main.hs
src/System/Hardware/: MPU6050.hs
src/cpp/: DMP.cpp  DMP.h  I2Cdev.cpp  I2Cdev.h  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h  Makefile  README.md  debug.h  main.cpp
