name:                mpu6050
version:             0.1.0.0
synopsis:            MPU-6050 for Haskell
description:         This is a Haskell library providing yaw, pitch and roll of MPU-6050.
                     CPP implements base are https://www.raspberrypi.org/forums/viewtopic.php?t=22266
homepage:            https://github.com/satosystems/mpu6050#readme
license:             BSD3
license-file:        LICENSE
author:              Satoshi Ogata <satosystems@gmail.com>
maintainer:          Satoshi Ogata <satosystems@gmail.com>
copyright:           (c) 2017 Satoshi Ogata
category:            Hardware, Raspberrypi
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  include-dirs:        src/cpp
  c-sources:           src/cpp/I2Cdev.cpp
                     , src/cpp/MPU6050.cpp
                     , src/cpp/DMP.cpp
                     , src/System/Hardware/MPU6050.c
  cc-options:          -DDMP_FIFO_RATE=9 -Wall -g -O2
  exposed-modules:     System.Hardware.MPU6050
  build-depends:       base >= 4.7 && < 5
                     , inline-c-cpp
  default-language:    Haskell2010
  extra-libraries:     m

executable mpu6050-demo
  hs-source-dirs:      demo
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mpu6050
  default-language:    Haskell2010

test-suite mpu6050-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpu6050
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/satosystems/mpu6050
